plugins/tracker/scripts/tracker-admin-fields/src/styles/_dragndrop.scss
/*
 * Copyright (c) Enalean, 2025 - Present. All Rights Reserved.
 *
 * This file is a part of Tuleap.
 *
 * Tuleap is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * Tuleap is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Tuleap. If not, see <http://www.gnu.org/licenses/>.
 */

.draggable-wrapper {
    display: flex;
    flex: 1 0 auto;
    gap: var(--tlp-small-spacing);

    &:last-child {
        margin: 0;
    }

    &:hover > .draggable-handle-container > .draggable-handle {
        opacity: 1;
    }

    &.drek-ghost {
        border-radius: var(--tlp-medium-radius);
        border-color: var(--tlp-dark-color);
        opacity: 1;
        background: var(--tlp-border-color);

        > .draggable-handle,
        > .draggable-form-element {
            visibility: hidden;
        }
    }
}

.draggable-form-element {
    flex: 1 0 auto;
}

.draggable-handle-container {
    display: flex;
    align-items: center;
    padding: 0 var(--tlp-small-spacing) 0 0;
}

.draggable-handle {
    transition:
        opacity 250ms ease-in-out,
        color 250ms ease-in-out;
    opacity: 0;
    color: var(--tlp-dimmed-color);
    cursor: move;

    &:hover {
        color: var(--tlp-main-color);
    }
}

